cmake_minimum_required(VERSION 3.20)
project(LearnC C)

set(CMAKE_C_STANDARD 11)

add_executable(Test Test.c)

add_executable(untitled main.c)
add_executable(rei15 rei15.c)
add_executable(rei17 rei17.c)
add_executable(strings strings.c)
add_executable(strings2 strings2.c)
add_executable(ren41 ren41.c)
add_executable(ret_prn ret_prn.c)
add_executable(circle_S circle_S.c)
add_executable(circle_S2 circle_S2.c)
add_executable(pow_of2 pow_of2.c)
add_executable(ren44 ren44.c)
add_executable(ren45 ren45.c)
add_executable(quadratic_equation quadratic_equation.c)
add_executable(escape_seq escape_seq.c)
add_executable(escape_seq_color escape_seq_color.c)
add_executable(ren46 ren46.c)
add_executable(ren47 ren47.c)
add_executable(gcd gcd.c)
add_executable(lcm lcm.c)
add_executable(sosuu sosuu.c)
add_executable(soinsu_bunkai soinsu_bunkai.c)
add_executable(bisection bisection.c)
add_executable(7-3.ren4 7-3.ren4.c)
add_executable(cubic_root cubic_root.c)
add_executable(7-3.ren5 7-3.ren5.c)
add_executable(newton newton.c)
add_executable(newton_cubic newton_cubic.c)
add_executable(saiki saiki.c)
add_executable(7.4-ren9 7.4-ren9.c)
add_executable(gcd_saiki gcd_saiki.c)
add_executable(fibo_saiki fibo_saiki.c)
add_executable(local_var local_var.c)
add_executable(ptr ptr.c)
add_executable(ptr2 ptr2.c)
add_executable(kansuu_irekae kansuu_irekae.c)
add_executable(ptr3 ptr3.c)
add_executable(ptr4 ptr4.c)
add_executable(liner_search liner_search.c)
add_executable(binary_search binary_search.c)
add_executable(ren10 ren10.c)
add_executable(selection_sort selection_sort.c)
add_executable(bubble_sort bubble.c)
add_executable(sort_time sort_time.c)
add_executable(struct struct.c)
add_executable(struct3 struct3.c)
add_executable(typedef typedef.c)
add_executable(typedef_vector typedef_vector.c)